--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700&display=swap');
 
+:root {
+    --very-light: hsl(240, 78%, 98%);
+    --light: hsl(234, 14%, 74%);
+    --grayish-blue: hsl(233, 13%, 49%);
+    --dark: hsl(232, 13%, 33%);
+    --purple: hsl(237, 63%, 64%);
+    --gradient: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,10 +20,152 @@ html {
     font-family: 'Montserrat', sans-serif;
 }
 
-:root {
-    --very-light: hsl(240, 78%, 98%);
-    --light: hsl(234, 14%, 74%);
-    --grayish-blue: hsl(233, 13%, 49%);
-    --dark: hsl(232, 13%, 33%);
-    --gradient: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
+h1 { padding: 50px 0; }
+h2 {
+    font-size: 4em;
+    letter-spacing: 2px;
+    padding: 1rem 0;
+}
+
+.dollar { 
+    position: relative;
+    top: -10px; left: 10px;
+    font-size: 1.5rem; }
+.hidden { display: none; }
+
+ul { list-style: none; }
+li { 
+    font-size: 80%;
+    padding: 15px 0px; 
+    border-bottom: 0.5px solid var(--light); }
+li:nth-of-type(1) { border-top: 0.5px solid var(--light); }
+
+/* BG Styling */
+body { 
+    background-color: var(--very-light); 
+    background-image: url(images/bg-top.svg), url(images/bg-bottom.svg);
+    background-position: top right, bottom left;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    overflow-x: hidden;
+    text-align: center; }
+
+/* Header */
+.header {
+    color: var(--grayish-blue);
+    width: 400px;
+    margin: 0 auto;
+}
+
+/*  Toggle Switch */
+.switch__label input { opacity: 0; }
+.switch__label {
+    position: relative;
+    display: inline-block;
+    height: 30.5px; width: 80px;
+    margin: 0 10px;
+    border: none;
+    border-radius: 100px;
+    background: var(--gradient);
+    bottom: 5px;
+}
+
+.slider {
+    position: absolute;
+    top: 0; bottom: 0; left: 0; right: 0;
+    cursor: pointer;
+}
+
+.slider::before {
+    content: '';
+    position: absolute;
+    left: 5px; top: 3px;
+    height: 24px; width: 24px;
+    background-color: #fff;
+    border-radius: 50%;
+    transition: 0.4s;
+}
+
+.switch__label input:checked + .slider::before { left: 51px; }
+
+/* Price Container */
+.price__container {
+    display: flex;
+    margin: 100px auto;
+    width: max-content;
+    border-radius: 8px;
+    background-color: transparent;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);   
+}
+
+.price__card { 
+    background-color: #fff;
+    color: var(--dark);
+    border-radius: 8px;
+    padding: 20px; 
+    max-height: 500px; min-width: 300px;
+}
+
+.price__card:nth-last-of-type(2) {
+    background: var(--gradient);
+    color: #fff;
+    margin: -20px 0;
+    padding: 40px 20px;
+}
+
+/* Button */
+.btn {
+    font-family: inherit;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    width: 100%;
+    padding: 10px 0;
+    margin-top: 25px;
+    border: none;
+    border-radius: 5px;
+    background: var(--gradient);
+    color: #fff;
+    cursor: pointer;
+}
+
+.btn:focus { outline: none; }
+.btn:active { transform: scale(.98); }
+.btn:hover {
+    background: #fff;
+    color: var(--purple);
+    border: 0.5px solid var(--purple);
+}
+
+.white-btn {
+    background: #fff;
+    color: var(--purple);
+}
+
+.white-btn:hover {
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+/* MQs */
+@media screen and (max-width: 914px) {
+    .price__container {
+        flex-direction: column;
+        box-shadow: none;
+        width: 90%;
+        margin: 70px auto 0;
+    }
+
+    .price__card,
+    .price__card:nth-last-of-type(2) { 
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+        margin: 0 auto 70px; 
+        width: 100%; max-width: 500px;
+    }
+
+@media screen and (max-width: 425px) {
+    .header { width: 300px; }
+    h2 { font-size: 3.5em; }
+    .price__card { min-width: 250px; }
 }
